test/corpus/sections.txt
======================
Sections with overline
======================

~~~~
Four
~~~~

--
A
--

^^^^^^^^^^
 Subtitle
^^^^^^^^^^

~~~~~
*Foo*
~~~~~

+++
Foo **bar**
+++

====  
with whitespaces
====  

---

(document
 (section
  (title))
 (section
  (title))
 (section
  (title))
 (section
  (title
   (emphasis)))
 (section
  (title
   (strong)))
 (section
  (title)))

=========================
Invalid overline sections
=========================

++
Short
+++

///
Short
//


!!!
Different
^^^

---

(document
  (paragraph)
  (paragraph)
  (paragraph))

==================
Underline sections
==================

Four
~~~~

A
--

Subtitle
^^^^^^^^^^

*Foo*
~~~~~

Foo **bar**
+++

with whitespaces
====  

---

(document
 (section
  (title))
 (section
  (title))
 (section
  (title))
 (section
  (title
   (emphasis)))
 (section
  (title
   (strong)))
 (section
   (title)))

==================
Section edge cases
==================

This is not a section title
::

  This a block

---

(document 
  (paragraph)
  (block_quote (paragraph)))
